# Anchor-template

./: Anchor.toml  Cargo.toml
.cargo/: config.toml
programs/my-program/: Cargo.toml
programs/my-program/src/: lib.rs
programs/my-project/src/: lib.rs
tests/: Cargo.toml  my_program.rs
tests/src/: Cargo.toml  test_initialize.rs
